[project]
name = "drasi-python"
version = "0.1.0"
description = "PyO3 Python bindings for DrasiLib"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
  "drasi-core",
  "drasi-lib",
  "sources/*",
  "reactions/*",
  "bootstrappers/*",
  "indexes/*",
  "state-stores/*",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-timeout>=2.2",
  "ruff>=0.8",
  "maturin>=1.7",
  "asyncpg>=0.30",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
