[package]
name = "drasi-core-python"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "_drasi_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
drasi-lib = { path = "../../lib" }
pyo3 = { version = "0.22", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.22", features = ["attributes", "tokio-runtime"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
async-trait = "0.1"
serde_json = "1.0"
anyhow = "1.0"

[workspace]
