[package]
name = "drasi-lib-python"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "_drasi_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
drasi-lib = { path = "../../lib" }
drasi-core-python = { path = "../drasi-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.22", features = ["attributes", "tokio-runtime"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
serde_json = "1.0"
pythonize = "0.22"
chrono = "0.4"
anyhow = "1.0"

[workspace]
