[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "drasi-lib"
version = "0.1.0"
description = "Python bindings for drasi-lib (DrasiLib, builders, streaming)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "drasi_lib._drasi_lib"
