[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "drasi_bootstrap_noop"
version = "0.1.0"
description = "PyO3 Python bindings for Drasi NoOpBootstrapProvider"
requires-python = ">=3.11"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "drasi_bootstrap_noop._drasi_bootstrap_noop"
