[package]
name = "drasi-bootstrap-postgres-python"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "_drasi_bootstrap_postgres"
crate-type = ["cdylib"]

[dependencies]
drasi-bootstrap-postgres = { path = "../../../components/bootstrappers/postgres" }
drasi-lib = { path = "../../../lib" }
drasi-core-python = { path = "../../drasi-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.22", features = ["attributes", "tokio-runtime"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
serde_json = "1.0"
pythonize = "0.22"
anyhow = "1.0"

[workspace]
