[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "drasi_index_rocksdb"
version = "0.1.0"
description = "PyO3 Python bindings for Drasi RocksDB IndexBackendPlugin"
requires-python = ">=3.11"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "drasi_index_rocksdb._drasi_index_rocksdb"
