[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "drasi_middleware"
version = "0.1.0"
description = "PyO3 Python bindings for Drasi Middleware configuration"
requires-python = ">=3.11"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "drasi_middleware._drasi_middleware"
