[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "drasi_reaction_http"
version = "0.1.0"
description = "PyO3 Python bindings for Drasi HttpReaction"
requires-python = ">=3.11"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "drasi_reaction_http._drasi_reaction_http"
