[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "drasi_reaction_storedproc_postgres"
version = "0.1.0"
description = "PyO3 Python bindings for Drasi StoredProc Postgres Reaction"
requires-python = ">=3.11"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "drasi_reaction_storedproc_postgres._drasi_reaction_storedproc_postgres"
